--- a/sass/_home.scss
+++ b/sass/_home.scss
@@ -12,7 +12,8 @@
 	}
 
 	#marquee {
-		background-image: url("../images/wood_backdrop.jpg");
+		background-image: url("../images/bg.jpg");
+		background-position: center bottom;
 	}
 
 	#work_grid {
