--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -5,6 +5,7 @@ $accent_color: #08c882;
 
 $ratio: 1.6;
 $font_size: 16px;
+$mobile_font_size: 14px;
 $line_height: floor($font_size*$ratio);
 $headline_font: "din-condensed-web",sans-serif;
 
