--- a/css/css.css
+++ b/css/css.css
@@ -116,84 +116,93 @@ h1, h2, h3, h4, h5, h6, li, p, html, body {
   margin: 0 auto;
 }
 
-/* line 1, ../sass/_type.scss */
+/* line 2, ../sass/_type.scss */
+*::selection {
+  background: rgba(8, 200, 130, 0.5);
+}
+/* line 6, ../sass/_type.scss */
+*::-moz-selection {
+  background: rgba(8, 200, 130, 0.5);
+}
+
+/* line 11, ../sass/_type.scss */
 h1, h2, h3, h4, h5, h6, li, p {
   margin-top: 0;
 }
 
-/* line 7, ../sass/_type.scss */
+/* line 17, ../sass/_type.scss */
 h1, h2 {
   color: #2d3244;
   font-size: 5rem;
   font-weight: 500;
   line-height: 1em;
 }
-/* line 13, ../sass/_type.scss */
+/* line 23, ../sass/_type.scss */
 h1.light, h2.light {
   color: #f0f0f0;
 }
 
-/* line 18, ../sass/_type.scss */
+/* line 28, ../sass/_type.scss */
 h1 {
   font-family: "din-condensed-web", sans-serif;
   text-transform: uppercase;
 }
 
-/* line 23, ../sass/_type.scss */
+/* line 33, ../sass/_type.scss */
 h2 {
   font-size: 1.5rem;
   line-height: 1.5em;
   font-weight: 700;
 }
 
-/* line 29, ../sass/_type.scss */
+/* line 39, ../sass/_type.scss */
 h3, h4, h5, h6 {
   font-size: 1em;
 }
 
-/* line 33, ../sass/_type.scss */
+/* line 43, ../sass/_type.scss */
 ul {
   margin-top: 0;
   padding-left: 1em;
 }
 
-/* line 38, ../sass/_type.scss */
+/* line 48, ../sass/_type.scss */
 li, p {
   font-size: 1em;
   margin: 0 0 1.5em 0;
 }
-/* line 42, ../sass/_type.scss */
+/* line 52, ../sass/_type.scss */
 li:last-child, p:last-child {
   margin-bottom: 0;
 }
 
-/* line 47, ../sass/_type.scss */
+/* line 57, ../sass/_type.scss */
 li {
   margin-bottom: 0;
 }
 
-/* line 51, ../sass/_type.scss */
+/* line 61, ../sass/_type.scss */
 a {
   color: #08c882;
   text-decoration: none;
 }
-/* line 56, ../sass/_type.scss */
+/* line 66, ../sass/_type.scss */
 a:hover {
   text-decoration: none;
 }
 
-/* line 61, ../sass/_type.scss */
+/* line 71, ../sass/_type.scss */
 .larger {
   font-size: 1.25em;
 }
 
-/* line 65, ../sass/_type.scss */
+/* line 75, ../sass/_type.scss */
 .smaller {
   font-size: .9em;
 }
 
 @media screen and (max-width: 568px) {
-  /* line 70, ../sass/_type.scss */
+  /* line 80, ../sass/_type.scss */
   h1 {
     font-size: 3.75rem;
   }
@@ -549,7 +558,7 @@ footer #linkedin:hover {
   nav {
     width: 50px;
     height: 50px;
-    background: url("../images/menu.svg") no-repeat bottom center;
+    background: url("../images/menu.svg") no-repeat right bottom;
   }
   /* line 252, ../sass/_core.scss */
   nav ul {
