--- a/sass/_type.scss
+++ b/sass/_type.scss
@@ -1,3 +1,13 @@
+* {
+	&::selection {
+		background: rgba($accent_color, .5);
+	}
+
+	&::-moz-selection {
+		background: rgba($accent_color, .5);;
+	}
+}
+
 h1, h2, h3, h4, h5, h6, li, p {
 	@extend %smooth;
 	@extend %font;
