--- a/css/css.css
+++ b/css/css.css
@@ -8,7 +8,7 @@ h1, h2, h3, h4, h5, h6, li, p, html, body {
 }
 
 /* line 30, ../sass/_variables.scss */
-a, button, .fake_button, header, footer li, .home #work_grid li * {
+a, button, .fake_button, header, #marquee, footer li, .home #work_grid li * {
   -webkit-transition: all 0.125s ease-in-out;
   -moz-transition: all 0.125s ease-in-out;
   transition: all 0.125s ease-in-out;
@@ -201,10 +201,15 @@ a:hover {
   font-size: .9em;
 }
 
-@media screen and (max-width: 568px) {
+@media screen and (max-width: 768px) {
   /* line 80, ../sass/_type.scss */
   h1 {
     font-size: 3.75rem;
+  }
+
+  /* line 84, ../sass/_type.scss */
+  h2 {
+    font-size: 1.25em;
   }
 }
 /* line 1, ../sass/_forms.scss */
@@ -388,6 +393,22 @@ nav a {
 
 /* line 96, ../sass/_core.scss */
 #marquee {
+  display: -webkit-box;
+  display: -moz-box;
+  display: box;
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -moz-box-align: center;
+  box-align: center;
+  -webkit-align-items: center;
+  -moz-align-items: center;
+  -ms-align-items: center;
+  -o-align-items: center;
+  align-items: center;
+  -ms-flex-align: center;
   width: 100%;
   height: 350px;
   text-align: center;
@@ -395,47 +416,46 @@ nav a {
   background-position: center center;
   font-size: 0;
 }
-/* line 103, ../sass/_core.scss */
+/* line 106, ../sass/_core.scss */
 #marquee:before {
   content: '';
   display: inline-block;
   height: 100%;
   vertical-align: middle;
 }
-/* line 110, ../sass/_core.scss */
+/* line 113, ../sass/_core.scss */
 #marquee.fixed {
   position: fixed;
 }
-/* line 113, ../sass/_core.scss */
+/* line 116, ../sass/_core.scss */
 #marquee.fixed + #wrapper {
   position: absolute;
   top: 350px;
   z-index: 2;
 }
-/* line 118, ../sass/_core.scss */
-#marquee .centered {
-  width: 100%;
-  display: inline-block;
-  vertical-align: middle;
-}
-/* line 124, ../sass/_core.scss */
+/* line 121, ../sass/_core.scss */
 #marquee h1 {
   margin-bottom: .25em;
 }
+/* line 125, ../sass/_core.scss */
+#marquee .left {
+  text-align: left;
+  padding-right: 50%;
+  padding-left: 50px;
+}
 
-/* line 129, ../sass/_core.scss */
+/* line 132, ../sass/_core.scss */
 #wrapper {
-  outline: 4px solid rgba(45, 50, 68, 0.5);
-  background-color: #f0f0f0;
+  border-top: 4px solid rgba(45, 50, 68, 0.5);
   width: 100%;
 }
 
-/* line 135, ../sass/_core.scss */
+/* line 137, ../sass/_core.scss */
 #intro {
   max-width: 1200px;
   padding: 50px;
 }
-/* line 139, ../sass/_core.scss */
+/* line 141, ../sass/_core.scss */
 #intro p {
   -webkit-columns: 2;
   -moz-columns: 2;
@@ -444,40 +464,41 @@ nav a {
   -moz-column-gap: 100px;
   column-gap: 100px;
 }
-/* line 145, ../sass/_core.scss */
+/* line 147, ../sass/_core.scss */
 #intro a:hover {
   background-color: #08c882;
   color: #f0f0f0;
   outline: 3px solid #08c882;
 }
 
-/* line 153, ../sass/_core.scss */
+/* line 155, ../sass/_core.scss */
 #content {
   position: relative;
   top: 0px;
   bottom: 100px;
+  background-color: #f0f0f0;
   padding: 0 0 50px;
 }
 
-/* line 158, ../sass/_core.scss */
+/* line 161, ../sass/_core.scss */
 footer {
   width: 100%;
   height: 100px;
   background-color: #b2b2b9;
 }
-/* line 162, ../sass/_core.scss */
+/* line 165, ../sass/_core.scss */
 footer.fixed {
   position: fixed;
   bottom: 0px;
 }
-/* line 166, ../sass/_core.scss */
+/* line 169, ../sass/_core.scss */
 footer ul {
   list-style: none;
   margin: 0;
   padding: 0;
   height: 100%;
 }
-/* line 173, ../sass/_core.scss */
+/* line 176, ../sass/_core.scss */
 footer li {
   background-size: 50px;
   background-repeat: no-repeat;
@@ -485,46 +506,46 @@ footer li {
   background-color: transparent;
   height: 100%;
 }
-/* line 182, ../sass/_core.scss */
+/* line 185, ../sass/_core.scss */
 footer a {
   display: block;
   height: 100%;
 }
-/* line 187, ../sass/_core.scss */
+/* line 190, ../sass/_core.scss */
 footer span {
   display: none;
 }
-/* line 191, ../sass/_core.scss */
+/* line 194, ../sass/_core.scss */
 footer #git {
   background-image: url("../images/git.svg");
 }
-/* line 194, ../sass/_core.scss */
+/* line 197, ../sass/_core.scss */
 footer #git:hover {
   background-color: #60B044;
 }
-/* line 199, ../sass/_core.scss */
+/* line 202, ../sass/_core.scss */
 footer #dribbble {
   background-image: url("../images/dribbble.svg");
 }
-/* line 202, ../sass/_core.scss */
+/* line 205, ../sass/_core.scss */
 footer #dribbble:hover {
   background-color: #EA4C89;
 }
-/* line 207, ../sass/_core.scss */
+/* line 210, ../sass/_core.scss */
 footer #linkedin {
   background-image: url("../images/linkedin.svg");
 }
-/* line 210, ../sass/_core.scss */
+/* line 213, ../sass/_core.scss */
 footer #linkedin:hover {
   background-color: #069;
 }
 
 @media screen and (min-width: 1200px) {
-  /* line 218, ../sass/_core.scss */
+  /* line 221, ../sass/_core.scss */
   #intro {
     margin: 0 auto;
   }
-  /* line 221, ../sass/_core.scss */
+  /* line 224, ../sass/_core.scss */
   #intro p {
     -webkit-columns: 1;
     -moz-columns: 1;
@@ -532,7 +553,7 @@ footer #linkedin:hover {
   }
 }
 @media screen and (max-width: 768px) {
-  /* line 229, ../sass/_core.scss */
+  /* line 232, ../sass/_core.scss */
   #intro p {
     -webkit-columns: 1;
     -moz-columns: 1;
@@ -540,27 +561,27 @@ footer #linkedin:hover {
   }
 }
 @media screen and (max-width: 568px) {
-  /* line 236, ../sass/_core.scss */
+  /* line 239, ../sass/_core.scss */
   html, body {
     font-size: 14px;
   }
 
-  /* line 240, ../sass/_core.scss */
+  /* line 243, ../sass/_core.scss */
   #name {
     width: 200px !important;
   }
-  /* line 243, ../sass/_core.scss */
+  /* line 246, ../sass/_core.scss */
   #name .smaller {
     display: none;
   }
 
-  /* line 248, ../sass/_core.scss */
+  /* line 251, ../sass/_core.scss */
   nav {
     width: 50px;
     height: 50px;
     background: url("../images/menu.svg") no-repeat right bottom;
   }
-  /* line 252, ../sass/_core.scss */
+  /* line 255, ../sass/_core.scss */
   nav ul {
     -webkit-transition: all 0.75s cubic-bezier(0.23, 1, 0.32, 1);
     -moz-transition: all 0.75s cubic-bezier(0.23, 1, 0.32, 1);
@@ -581,50 +602,50 @@ footer #linkedin:hover {
     -webkit-filter: blur(5px);
     opacity: 0;
   }
-  /* line 263, ../sass/_core.scss */
+  /* line 266, ../sass/_core.scss */
   nav li {
     background-color: rgba(45, 50, 68, 0.95);
     line-height: 3em;
     float: none;
     width: 100%;
   }
-  /* line 269, ../sass/_core.scss */
+  /* line 272, ../sass/_core.scss */
   nav li a {
     color: #fff !important;
   }
-  /* line 273, ../sass/_core.scss */
+  /* line 276, ../sass/_core.scss */
   nav li div {
     top: auto;
     bottom: 0;
     background-color: #191b25;
     height: 2px;
   }
-  /* line 280, ../sass/_core.scss */
+  /* line 283, ../sass/_core.scss */
   nav li:last-child {
     display: none;
   }
 
-  /* line 286, ../sass/_core.scss */
+  /* line 289, ../sass/_core.scss */
   #marquee {
     height: 300px;
     padding: 0 12.5px;
   }
-  /* line 290, ../sass/_core.scss */
+  /* line 293, ../sass/_core.scss */
   #marquee.fixed + #wrapper {
     top: 300px;
   }
 
-  /* line 295, ../sass/_core.scss */
+  /* line 298, ../sass/_core.scss */
   #intro {
     padding: 12.5px;
   }
 
-  /* line 299, ../sass/_core.scss */
+  /* line 302, ../sass/_core.scss */
   #content {
     padding: 0;
   }
 
-  /* line 303, ../sass/_core.scss */
+  /* line 306, ../sass/_core.scss */
   .open nav ul {
     -webkit-transform: translate3d(0, 50px, 0);
     -moz-transform: translate3d(0, 50px, 0);
@@ -844,5 +865,44 @@ footer #linkedin:hover {
 
 /* line 2, ../sass/_work.scss */
 .work #marquee {
-  background-image: url("../images/wood_backdrop.jpg");
+  background-image: url("../images/above.jpg");
+  background-position: right top;
+}
+/* line 6, ../sass/_work.scss */
+.work #marquee h1, .work #marquee h2 {
+  color: #f0f0f0;
+}
+/* line 12, ../sass/_work.scss */
+.work #intro h1, .work #intro h2 {
+  display: none;
+}
+@media screen and (min-width: 1200px) {
+  /* line 18, ../sass/_work.scss */
+  .work #marquee {
+    height: 500px;
+  }
+  /* line 21, ../sass/_work.scss */
+  .work #marquee.fixed + #wrapper {
+    top: 500px;
+  }
+}
+@media screen and (max-width: 768px) {
+  /* line 29, ../sass/_work.scss */
+  .work #marquee h1, .work #marquee h2 {
+    display: none;
+  }
+  /* line 35, ../sass/_work.scss */
+  .work #intro h1 {
+    margin-bottom: .25em;
+  }
+  /* line 38, ../sass/_work.scss */
+  .work #intro h1, .work #intro h2 {
+    display: block;
+  }
+}
+@media screen and (max-width: 568px) {
+  /* line 45, ../sass/_work.scss */
+  .work #marquee {
+    background-position-y: 50px;
+  }
 }
