--- a/css/css.css
+++ b/css/css.css
@@ -219,40 +219,49 @@ button, .fake_button {
   -ms-appearance: none;
   -o-appearance: none;
   appearance: none;
-  width: 150px;
+  width: auto;
   height: 50px;
+  padding: 0 25px;
   display: block;
   background-color: #08c882;
   border: 2px solid transparent;
   font-size: 16px;
-  line-height: 48px;
+  line-height: 46px;
   color: #f0f0f0;
   text-align: center;
   cursor: pointer;
 }
-/* line 14, ../sass/_forms.scss */
+/* line 15, ../sass/_forms.scss */
 button:hover, .fake_button:hover {
   background-color: #07af72;
   text-decoration: none;
 }
 
-/* line 21, ../sass/_forms.scss */
+/* line 22, ../sass/_forms.scss */
 #marquee .fake_button {
+  width: 150px;
+  padding: 0;
   display: inline-block;
   color: #2d3244;
   background-color: rgba(240, 240, 240, 0.35);
   border-color: #2d3244;
   margin: 0 25px;
 }
-/* line 28, ../sass/_forms.scss */
+/* line 31, ../sass/_forms.scss */
 #marquee .fake_button:hover {
   color: #f0f0f0;
   background-color: #08c882;
   border-color: transparent;
 }
 
+@media screen and (max-width: 568px) {
+  /* line 40, ../sass/_forms.scss */
+  button, .fake_button {
+    width: 100%;
+  }
+}
 @media screen and (max-width: 360px) {
-  /* line 38, ../sass/_forms.scss */
+  /* line 47, ../sass/_forms.scss */
   #marquee .fake_button {
     width: 100px;
   }
@@ -485,24 +494,35 @@ nav a {
 }
 
 /* line 165, ../sass/_core.scss */
+#screenshot_modal {
+  position: fixed;
+  top: 0px;
+  right: 0px;
+  bottom: 0px;
+  left: 0px;
+  z-index: 999;
+  background-color: #f0f0f0;
+}
+
+/* line 170, ../sass/_core.scss */
 footer {
   width: 100%;
   height: 100px;
   background-color: #b2b2b9;
 }
-/* line 169, ../sass/_core.scss */
+/* line 174, ../sass/_core.scss */
 footer.fixed {
   position: fixed;
   bottom: 0px;
 }
-/* line 173, ../sass/_core.scss */
+/* line 178, ../sass/_core.scss */
 footer ul {
   list-style: none;
   margin: 0;
   padding: 0;
   height: 100%;
 }
-/* line 180, ../sass/_core.scss */
+/* line 185, ../sass/_core.scss */
 footer li {
   background-size: 50px;
   background-repeat: no-repeat;
@@ -510,46 +530,46 @@ footer li {
   background-color: transparent;
   height: 100%;
 }
-/* line 189, ../sass/_core.scss */
+/* line 194, ../sass/_core.scss */
 footer a {
   display: block;
   height: 100%;
 }
-/* line 194, ../sass/_core.scss */
+/* line 199, ../sass/_core.scss */
 footer span {
   display: none;
 }
-/* line 198, ../sass/_core.scss */
+/* line 203, ../sass/_core.scss */
 footer #git {
   background-image: url("../images/git.svg");
 }
-/* line 201, ../sass/_core.scss */
+/* line 206, ../sass/_core.scss */
 footer #git:hover {
   background-color: #60B044;
 }
-/* line 206, ../sass/_core.scss */
+/* line 211, ../sass/_core.scss */
 footer #dribbble {
   background-image: url("../images/dribbble.svg");
 }
-/* line 209, ../sass/_core.scss */
+/* line 214, ../sass/_core.scss */
 footer #dribbble:hover {
   background-color: #EA4C89;
 }
-/* line 214, ../sass/_core.scss */
+/* line 219, ../sass/_core.scss */
 footer #linkedin {
   background-image: url("../images/linkedin.svg");
 }
-/* line 217, ../sass/_core.scss */
+/* line 222, ../sass/_core.scss */
 footer #linkedin:hover {
   background-color: #069;
 }
 
 @media screen and (min-width: 1200px) {
-  /* line 225, ../sass/_core.scss */
+  /* line 230, ../sass/_core.scss */
   #intro {
     margin: 0 auto;
   }
-  /* line 228, ../sass/_core.scss */
+  /* line 233, ../sass/_core.scss */
   #intro p {
     -webkit-columns: 1;
     -moz-columns: 1;
@@ -559,7 +579,7 @@ footer #linkedin:hover {
   }
 }
 @media screen and (max-width: 768px) {
-  /* line 238, ../sass/_core.scss */
+  /* line 243, ../sass/_core.scss */
   #intro p {
     -webkit-columns: 1;
     -moz-columns: 1;
@@ -567,27 +587,27 @@ footer #linkedin:hover {
   }
 }
 @media screen and (max-width: 568px) {
-  /* line 245, ../sass/_core.scss */
+  /* line 250, ../sass/_core.scss */
   html, body {
     font-size: 14px;
   }
 
-  /* line 249, ../sass/_core.scss */
+  /* line 254, ../sass/_core.scss */
   #name {
     width: 200px !important;
   }
-  /* line 252, ../sass/_core.scss */
+  /* line 257, ../sass/_core.scss */
   #name .smaller {
     display: none;
   }
 
-  /* line 257, ../sass/_core.scss */
+  /* line 262, ../sass/_core.scss */
   nav {
     width: 50px;
     height: 50px;
     background: url("../images/menu.svg") no-repeat right bottom;
   }
-  /* line 261, ../sass/_core.scss */
+  /* line 266, ../sass/_core.scss */
   nav ul {
     -webkit-transition: all 0.75s cubic-bezier(0.23, 1, 0.32, 1);
     -moz-transition: all 0.75s cubic-bezier(0.23, 1, 0.32, 1);
@@ -608,50 +628,45 @@ footer #linkedin:hover {
     -webkit-filter: blur(5px);
     opacity: 0;
   }
-  /* line 272, ../sass/_core.scss */
+  /* line 277, ../sass/_core.scss */
   nav li {
     background-color: rgba(45, 50, 68, 0.95);
     line-height: 3em;
     float: none;
     width: 100%;
   }
-  /* line 278, ../sass/_core.scss */
+  /* line 283, ../sass/_core.scss */
   nav li a {
     color: #fff !important;
   }
-  /* line 282, ../sass/_core.scss */
+  /* line 287, ../sass/_core.scss */
   nav li div {
     top: auto;
     bottom: 0;
     background-color: #191b25;
     height: 2px;
   }
-  /* line 289, ../sass/_core.scss */
+  /* line 294, ../sass/_core.scss */
   nav li:last-child {
     display: none;
   }
 
-  /* line 295, ../sass/_core.scss */
+  /* line 300, ../sass/_core.scss */
   #marquee {
     height: 300px;
     padding: 0 12.5px;
   }
-  /* line 299, ../sass/_core.scss */
+  /* line 304, ../sass/_core.scss */
   #marquee.fixed + #wrapper {
     top: 300px;
   }
 
-  /* line 304, ../sass/_core.scss */
+  /* line 309, ../sass/_core.scss */
   #intro {
     padding: 12.5px;
   }
 
-  /* line 308, ../sass/_core.scss */
-  #content {
-    padding: 0;
-  }
-
-  /* line 312, ../sass/_core.scss */
+  /* line 313, ../sass/_core.scss */
   .open nav ul {
     -webkit-transform: translate3d(0, 50px, 0);
     -moz-transform: translate3d(0, 50px, 0);
@@ -858,12 +873,16 @@ footer #linkedin:hover {
     right: 12.5px;
   }
   /* line 193, ../sass/_home.scss */
+  .home #content {
+    padding: 0;
+  }
+  /* line 197, ../sass/_home.scss */
   .home #work_grid li {
     width: 50%;
   }
 }
 @media screen and (max-width: 360px) {
-  /* line 200, ../sass/_home.scss */
+  /* line 204, ../sass/_home.scss */
   .home #work_grid li {
     width: 100%;
   }
